updates introduction page

--- a/src/styles/shortIntroPage/webVersion.css
+++ b/src/styles/shortIntroPage/webVersion.css
@@ -1,5 +1,24 @@
 .short-intro-cover {
     width: auto;
-    height: 100vh;
+    height: 70vh;
     background-color: #cf0205;
+    color: white;
+    padding: 15vh;
+}
+
+.short-intro-content {
+    width: 65%;
+    margin-left: 18%;
+}
+
+.short-intro-heading {
+    width: 95%;
+    font-size: 5vmin;
+    text-align: center;
+}
+
+.short-intro-details {
+    font-size: 3.5vmin;
+    line-height: 5vmin;
+    margin-top: 5vmin;
 }
