--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,39 +1,30 @@
+@import url(./shortIntro/web.css);
+@import url(./surveyIntro/web.css);
+@import url(./landingPage/web.css);
 .App {
-  text-align: center;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  letter-spacing: 0.2vmin;
-}
+  text-align: center; }
 
 .hover-pointer {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+  height: 80px; }
 
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
-}
+  color: white; }
 
 .App-title {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 .App-intro {
-  font-size: large;
-}
+  font-size: large; }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
