--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 @import "./shortIntro/web.css";
 @import "./surveyIntro/web.css";
 @import "./landingPage/web.css";
+@import "./countryInfo/web.css";
 
 .App {
   text-align: center;
