--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   letter-spacing: 0.2vmin;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.hover-underline:hover {
+  text-decoration: underline;
+}
