--- a/src/styles/shortIntro/web.css
+++ b/src/styles/shortIntro/web.css
@@ -1,7 +1,7 @@
 .short-intro-cover {
     width: auto;
     height: 75vh;
-    background-color: #cf0205;
+    background-color: #FF0808;
     color: white;
     padding: 15vh;
 }
