finishes the design part of the survey section

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "./surveyIntro/web.css";
 @import "./landingPage/web.css";
 @import "./countryInfo/web.css";
+@import "./survey/web.css";
 
 .App {
   text-align: center;
