--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
 @import url(./surveyIntro/web.css);
 @import url(./landingPage/web.css);
 @import url(./countryInfo/web.css);
+@import url(./survey/web.css);
 .App {
   text-align: center; }
 
