--- a/src/styles/survey/web.css
+++ b/src/styles/survey/web.css
@@ -155,3 +155,14 @@
     -o-transition: 1s;
     transition: 1s;
 }
+
+.submitSurveyButton {
+    font-size: 3vmin;
+    margin: 0vmin 10vmin 10vmin 10vmin;
+    border: solid 0.1vmin;
+    color: white;
+    padding: 2vmin 5vmin;
+    width: 20vw;
+    text-align: center;
+    margin-left: 35vw;
+}
