--- a/src/styles/survey/web.css
+++ b/src/styles/survey/web.css
@@ -68,6 +68,16 @@
     cursor: pointer;
 }
 
+.response-icon-eight-options {
+    font-size: 2vmin;
+    width: 15vw;
+    height: 15vw;
+    padding: 2vw;
+    border: solid 0.1vmin;
+    float: left;
+    cursor: pointer;
+}
+
 .response-icon {
     text-align: center;
     font-size: 7vmin;
@@ -132,6 +142,8 @@
     font-size: 2.5vmin;
     margin-top: 1.5vmin;
     text-align: center;
+    margin-left: -25%;
+    width: 150%;
 }
 
 .bay-area-small-font {
