--- a/src/styles/survey/web.css
+++ b/src/styles/survey/web.css
@@ -38,7 +38,7 @@
     padding: 10vmin;
     margin-top: 15vmin;
     width: 85vw;
-    min-height: 80vh;
+    min-height: 40vh;
 }
 
 .survey-progress-indicator {
@@ -181,4 +181,28 @@
 
 .option-unselected {
     background-color: rgba(255,255,255,0) !important;
+}
+
+.survey-spouse-question-show {
+    display: inline-block;
+}
+
+.survey-spouse-question-hide {
+    display: none;
+}
+
+.survey-progress-bar-container {
+    width: 100vw;
+    height: 3vh;
+    position: absolute;
+    z-index: 0;
+    background-color: yellow;
+}
+
+.survey-progress-bar {
+    position: absolute;
+    width: 30%;
+    height: 3vh;
+    background-color: blue;
+    z-index: 5;
 }
