adds chart. the next step is massaging the data and make the chart interactive

--- a/src/styles/survey/web.css
+++ b/src/styles/survey/web.css
@@ -205,3 +205,9 @@
     height: 2vh;
     background-color: #00bcd4;
 }
+
+.test-line-chart {
+    width: 80vw;
+    height: 50vh;
+    margin-left: 10vw;
+}
